--- a/index.html
+++ b/index.html
@@ -1299,6 +1299,11 @@
         <div class="hero-image-frame">
           <div class="hero-image-bg"></div>
           <div class="hero-image-placeholder">
+            <image
+              src="/image/coach-hero.jpeg"
+              alt="Coach TL"
+              style="width: 100%; height: 100%; object-fit: cover"
+            />
             <span class="hero-image-placeholder-text">TL</span>
           </div>
 
